Update API
1) Allow trailing slashes in URLs
2) Normalize errors
3) Explicitly denote errors in Swagger.json
4) Remove some dead code
5) Set API version to 1.0.0
