# swagger.yaml
@@ -2,8 +2,30 @@ swagger: '2.0'
 info:
   description: Automatically produces natural language news reports from EuroStat data.
   title: EuroStat news NLG API
-  version: 0.1.0
+  version: 1.0.0
 paths:
+  /health:
+    options:
+      description: "Returns a JSON array of language codes supported by the /eunlg endpoint."
+      responses:
+        '200':
+          description: OK
+    get:
+      description: "Returns the version number of the system as well. A reply indicates the system is healthy."
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            required:
+              - version
+            properties:
+              version:
+                type: string
+                example: "0.1.0"
+
   /languages:
     options:
       description: "Describes the available HTTP methods for this end point."
@@ -11,7 +33,7 @@ paths:
         '200':
           description: OK
     get:
-      description: Returns a JSON array of language codes supported by the /eunlg endpoint.
+      description: "Returns a JSON array of language codes supported by the /eunlg endpoint."
       produces:
         - application/json
       responses:
@@ -81,6 +103,7 @@ paths:
             properties:
               dataset:
                 type: string
+                example: "cphi"
       responses:
         '200':
           description: OK
@@ -94,6 +117,15 @@ paths:
                 example:
                   - AT
                   - ET
+        '400':
+          description: Error
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+                example:
+                  "Invalid value for 'dataset', query /datasets for valid options."
   /eunlg:
     options:
       description: "Describes the available HTTP methods for this end point."
@@ -145,3 +177,10 @@ paths:
                 example: <p>...</p>
         '400':
           description: Missing or invalid inputs
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+                example:
+                  "Invalid value for 'location', query /locations for valid options."
